ContextMenu: fix z-index

--- a/teamapps-client/less/micro-components/ContextMenu.less
+++ b/teamapps-client/less/micro-components/ContextMenu.less
@@ -20,6 +20,7 @@
 
 .ContextMenu {
   position: absolute;
+  z-index: var(--ta-zindex-dropdown);
   background-color: var(--ta-bg-color); 
   border: 1px solid var(--ta-input-border-color);
   border-radius: var(--ta-border-radius);
